<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shared Paint</string>
    <string name="title_draw_board">Draw Board</string>
    <string name="rectangle">rect</string>
    <string name="pencil">pencil</string>
    <string name="line">line</string>
    <string name="triangle">triangle</string>
    <string name="text">text</string>
    <string name="circle">circle</string>
    <string name="action_settings">settings</string>
    <string name="stroke_and_fill">stroke and fill</string>
    <string name="stroke">stroke</string>
    <string name="fill">fill</string>
    <string name="type_your_text">Type Your Text</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="add_member">add member</string>
    <string name="select_style">select style</string>
    <string name="select_drawing_option">Select drawing option</string>
    <string name="title_activity_desktop">My Drawings</string>
    <string name="create_new_board">Create New Board</string>
    <string name="my_drawings">My Drawings</string>
    <string name="empty_string"></string>
    <string name="title_activity_create_new_board">Create New Board</string>
    <string name="insert_board_name">Insert board name</string>
    <string name="create">Create</string>
    <string name="title_activity_members_mange">Members Mangement</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_new_member">Add new member</string>
    <string name="save">Save</string>
    <string name="authorization">authorization</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="start_activity_content">Shared\nPaint</string>
    <string name="loading">Loading</string>
    <string name="undo_drawable_title">Undo</string>
    <string name="redo_drawable_title">Redo</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="create_new_board_progress_creating">Creating&#8230;</string>
    <string name="create_new_board_name_length_error">Must be 5-15 characters</string>
    <string name="prompt_board_name">Board name</string>
    <string name="remove_member">remove member</string>
    <string name="add">Add</string>
    <string name="delete_board">Delete board</string>
    <string name="delete_board_sure_message">Are you sure that you want to delete the board?</string>
    <string name="delete_board_success_message">Board delete successfully</string>
    <string name="deleting">Deleting</string>
    <string name="leave_board">Leave board</string>
    <string name="leave_board_sure_message">Are you sure that you want to leave the board?</string>
    <string name="leave_board_success_message">You left the board successfully</string>
    <string name="leaving">Leaving</string>
	<string name="action_logout">Logout</string>
	<string name="pref_server_details">Server details</string>
	<string name="pref_server_address">Server address</string>
	<string name="pref_server_port">Server port</string>
	<string name="pref_default_server_address">192.168.0.131</string>
	<string name="pref_default_server_port">8080</string>
</resources>