<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/save_as_picture"
        android:icon="@drawable/save"
        android:orderInCategory="104"
        android:showAsAction="always"
        android:title="@string/save"/>
    
    <item
        android:id="@+id/action_add_member"
        android:icon="@drawable/add_person"
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/add_member"/>
    <item
        android:id="@+id/action_undo_selected"
        android:icon="@drawable/undo"
        android:orderInCategory="106"
        android:showAsAction="always"
        android:title="@string/undo"/>
    <item
        android:id="@+id/action_redo_selected"
        android:icon="@drawable/redo"
        android:orderInCategory="107"
        android:showAsAction="always"
        android:title="@string/redo"/>

</menu>